fixed advantages: flex on mobile-tablet-desktop (width 100%)

--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -67,8 +67,8 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: stretch;
 
   padding: 0;
   margin: 50px 0 0 0;
@@ -91,13 +91,21 @@
 
   border: 1px solid transparent;
 
+  &:nth-child(3n + 2) {
+    margin: 0 29px;
+  }
+
   &:focus,
   &:hover, {
     border: 1px solid #ffffff;
   }
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: 1920px) {
     width: 31.48%;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 30.88%;
   }
 
   @media (max-width: $tablet-width-only) {
